# Change Log
This project adheres to [Semantic Versioning](http://semver.org/).

## [Unreleased]
### Added

### Changed

### Fixed


## EvoPER [0.5.0] - 2018-05-26
### Added
- OptionsTS The option class for Tabu search algorithm
- abm.tabu The EvoPER Tabu search implementation
- abm.tabu.R New file containing the the tabu search implementation

### Changed
- extremize Changed the wrapper for supporting Tabu search
- Class Estimates optimization replace rbind by data.table's rbindlist
- ObjectiveFunction support for cast parameter to integer
- enforceBouds support for cast parameter to integer

### Fixed


## EvoPER [0.4.0] - 2017-03-14
### Added
- f0.rosenbrockn Rosenbrock of N parameters for variadic input
- f1.rosenbrockn Rosenbrock of N parameters for vectors
- f0.cigar Cigar of N parameters for variadic input
- f1.cigar Cigar of N parameters for vectors
- f0.schwefel Schwefel of N parameters for variadic input
- f1.schwefel Schwefel of N parameters for vectors
- f0.bohachevsky Bohachevsky of N parameters for variadic input
- f1.bohachevsky Bohachevsky of N parameters for vectors
- f0.schaffer Schaffer of N parameters for variadic input
- f1.schaffer Schaffer of N parameters for vectors
- random.wheel Function for randomlt gerating random seeds
- predatorprey.plot1 A wrapper for predatorprey.plot0 for parameter list instead single vars
- compare.algorithms1 Sistematic comparison of optimization algorithms
- show.comp1 Plot the results of 'compare.algorithms1'
- class-options.R new file
- class-objective.R new file
- class-estimates.R new file
- experiments.R new file
- test-functions.R new file
- helper-functions.R new file
- abm-pso.R new file
- abm-saa.R new file
- abm-acor.R new file
- abm-ees1.R new file
- abm-ees2.R new file
- Basic unit testing for metaheuristics


### Changed
- predatorprey.plot - Now is predatorprey.plot0
- Estimates$getBest() - Fixed return value for ACOR eliminating "w"