@@ -49,6 +49,8 @@ export(elog.level)
 export(enforceBounds)
 export(es.evaluate)
 export(extremize)
+export(f0.ackley)
+export(f0.ackley4)
 export(f0.adtn.rosenbrock2)
 export(f0.bohachevsky)
 export(f0.bohachevsky4)
@@ -70,6 +72,7 @@ export(f0.schaffer4)
 export(f0.schwefel)
 export(f0.schwefel4)
 export(f0.test)
+export(f1.ackley)
 export(f1.adtn.rosenbrock2)
 export(f1.bohachevsky)
 export(f1.cigar)
@@ -81,6 +84,7 @@ export(f1.schaffer)
 export(f1.schwefel)
 export(f1.test)
 export(fixdfcolumns)
+export(generateSolution)
 export(getFitness)
 export(getSolution)
 export(gm.mean)
@@ -90,6 +94,7 @@ export(initSolution)
 export(lowerBound)
 export(naiveperiod)
 export(partSolutionSpace)
+export(pop)
 export(predatorprey)
 export(predatorprey.plot0)
 export(predatorprey.plot1)
@@ -100,6 +105,7 @@ export(pso.lbest)
 export(pso.neighborhood.K2)
 export(pso.neighborhood.K4)
 export(pso.neighborhood.KN)
+export(push)
 export(random.wheel)
 export(saa.bolt)
 export(saa.neighborhood)
